The first version of Toolbar.java, an enviroment customization class, is complete. The Runner, Window, and Main classes had to be added to to integrate Toolbar. GitHub issue #4 - failure to advance when bottom side adjacent to obstacle - was also fixed.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,1 @@
-/Main.class
-/Window.class
-/Runner.class
-/EndGoal.class
-/RandomGenerator.class
-/Obstacle.class
-/ModRectangle.class
-/Map.class
+/Toolbar.class
